--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ addons:
 
 before_deploy:
 - cd ../
-- openssl aes-256-cbc -K $encrypted_a297503f3296_key -iv $encrypted_a297503f3296_iv -in deploy_rsa.enc -out deploy_rsa -d
+- openssl aes-256-cbc -K $encrypted_a297503f3296_key -iv $encrypted_a297503f3296_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
