--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 appdirs==1.4.3
-Flask==0.10.1
+certifi==2018.8.24
+chardet==3.0.4
+Click==7.0
+Flask==1.0.2
 Flask-Cors==3.0.2
-Flask-SQLAlchemy==2.0
+Flask-SQLAlchemy==2.3.2
+idna==2.7
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2==2.10
 MarkupSafe==1.0
 packaging==16.8
 pyparsing==2.2.0
+requests==2.19.1
 six==1.10.0
 SQLAlchemy==1.1.9
-Werkzeug==0.12.1
+urllib3==1.23
+Werkzeug==0.14.1
