--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   skip_cleanup: true
   script: rsync -r -e 'ssh -p 4444' --quiet --exclude 'frontend' --exclude 'node_modules' --exclude 'deploy_rsa.enc' --exclude 'README.md' $TRAVIS_BUILD_DIR/ floris@185.57.8.139:/var/www/declarations.svid.nl/declarations
   on:
-    branch: master
+    branch: main
 
 addons:
   ssh_known_hosts: 185.57.8.139:4444
